gitops/source-apps/apps/frontend-demo/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecsdemo-frontend
  labels:
    app: ecsdemo-frontend
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecsdemo-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecsdemo-frontend
        service: ecsdemo-frontend
    spec:
      containers:
      - image: brentley/ecsdemo-frontend:latest
        imagePullPolicy: Always
        name: ecsdemo-frontend
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ecsdemo-frontend
  namespace: apps
  labels:
    service: ecsdemo-frontend
spec:
  selector:
    app: ecsdemo-frontend
  ports:
   - protocol: TCP
     port: 80
     targetPort: 3000
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: ecsdemo-frontend
#   namespace: apps
# spec:
#   hosts:
#   - ecsdemo-frontend
#   http:
#   - route:
#     - destination:
#         host: ecsdemo-frontend
