gitops/source-apps/apps/frontend-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecsdemo-frontend
  namespace: apps
spec:
  selector:
    app: ecsdemo-frontend
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 3000
